--- a/admin.html
+++ b/admin.html
@@ -233,7 +233,7 @@
     <el-container>
       <el-header>
         <div class="header-content">
-          <span class="title" @click="refreshDashboard">Dashboard</span>
+          <span class="title" @click="refreshDashboard">图床仪表板</span>
           <div class="search-card">
             <el-input v-model="search" size="mini" placeholder="输入关键字搜索"></el-input>
           </div>
